--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -1,24 +1,34 @@
 ---
 const accordionData = [
   {
+    title: "Requisitos para alugar um carro",
+    content: `
+      O locatário/condutor deverá possuir idade mínima de 21 anos.
+      O locatário deverá apresentar seu documento de habilitação original, emitido há mais de 2 anos (CNH Definitiva), válido e dentro do prazo de vencimento.
+      Estrangeiros deverão apresentar passaporte, habilitação válida e visto de permanência.
+      O locatário deverá apresentar cartão de crédito válido, dentro do prazo de vencimento, com limite de crédito disponível para pre-autorização.
+      Não serão aceitos pagamentos em dinheiro.
+    `,
+  },
+  {
     title: "Sobre a diária",
-    content: "Informações sobre como funcionam as tarifas diárias de aluguel.",
+    content: `A diária do carro é de 24 horas, com até 1 hora de tolerância para devolução. A partir da 25ª hora, incidirá cobrança de diária extra;`,
   },
   {
     title: "Reservas de longa duração",
-    content: "Detalhes sobre preços e condições para reservas com duração estendida.",
+    content: "Para reservas superiores a 30 dias, o cliente deverá realizar um Contrato Mensal. Caso queira permanecer com o carro alugado, você deverá dirigir-se pessoalmente a Loja para confirmar a disponibilidade do veículo locado, confirmar o novo período e assinar o novo contrato.",
   },
   {
     title: "Entregas de veículos",
-    content: "Explicações sobre o processo de entrega e devolução do veículo.",
+    content: "Para entrega de veículos em outra cidade, consulte valores;",
   },
   {
     title: "Motoristas Adicionais",
-    content: "Regras e tarifas para adicionar condutores extras na reserva.",
+    content: "O cliente pode nomear até 4 (quatro) motoristas adicionais, implicando no pagamento da taxa diária vigente.",
   },
   {
     title: "Reservas por grupos de veículos",
-    content: "Como funcionam as reservas por categoria de carro e disponibilidade.",
+    content: "A locadora não garante a reserva de carro por marca, modelo, cor ou configuração específica. O locatário deve optar por um dos carros disponíveis e pertencentes ao grupo, no dia da abertura do contrato de locação e retirada do carro junto à loja. As características dos carros apresentadas neste website poderão sofrer variações entre os próprios carros do grupo e lojas de atendimento da locadora.",
   },
 ];
 ---
