--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -31,77 +31,79 @@ import logo from "../assets/logo-white.png";
     <!-- Main Footer -->
     <div class="relative px-6 py-8 md:py-16 lg:px-20 bg-c-blue text-c-white overflow-hidden justify-items-center">
       <!-- Background image (right curved shape) -->
-      <img src={bgLogo.src} alt="fundo" class="absolute right-0 top-0 h-full object-cover hidden lg:block" />
+      <img src={bgLogo.src} alt="fundo" class="absolute right-0 top-0 h-full object-cover hidden lg:block z-10" />
 
       <img src={logo.src} alt="Camdal" class="mt-16 mb-20 lg:mb-44" />
 
       <!-- Footer Content -->
-      <div class="relative z-10 grid grid-cols-1 sm:grid-cols-2 md:flex gap-8 sm:gap-4 w-full xl:max-w-4xl">
-        <!-- Páginas -->
-        <div class="grid grid-cols-2 w-full">
-          <div class="text-center sm:text-left">
-            <h4 class="text-sm font-bold uppercase mb-4">Páginas</h4>
-            <ul class="space-y-2 text-sm font-light">
-              <li>Home</li>
-              <li>Sobre</li>
-              <li>Nossos carros</li>
-              <li>Contato</li>
-            </ul>
+      <div class="z-20 relative">
+        <div class="relative grid grid-cols-1 sm:grid-cols-2 md:flex gap-8 sm:gap-4 w-full xl:max-w-4xl">
+          <!-- Páginas -->
+          <div class="grid grid-cols-2 w-full">
+            <div class="text-center sm:text-left">
+              <h4 class="text-sm font-bold uppercase mb-4">Páginas</h4>
+              <ul class="space-y-2 text-sm font-light">
+                <li><a href="/">Home</a></li>
+                <li><a href="sobre">Sobre</a></li>
+                <li><a href="nossos-carros">Nossosa carros</a></li>
+                <li><a href="contato">Contato</a></li>
+              </ul>
+            </div>
+
+            <!-- Legal -->
+            <div class="text-center sm:text-left">
+              <h4 class="text-sm font-bold uppercase mb-4">Legal</h4>
+              <ul class="space-y-2 text-sm font-light">
+                <li><a href="termos-de-uso">Termos de uso</a></li>
+                <li><a href="politica-de-privacidade">Política de privacidade</a></li>
+              </ul>
+            </div>
           </div>
 
-          <!-- Legal -->
-          <div class="text-center sm:text-left">
-            <h4 class="text-sm font-bold uppercase mb-4">Legal</h4>
-            <ul class="space-y-2 text-sm font-light">
-              <li>Termos de uso</li>
-              <li>Política de Cookies</li>
-            </ul>
+          <div class="mx-auto md:mx-0 md:flex-none text-center sm:text-left">
+            <!-- Contato Paranavaí -->
+            <div class="mb-8 flex flex-col items-center sm:items-start">
+              <h4 class="text-sm uppercase mb-2">Contato Paranavaí</h4>
+              <a href="tel:4439002425" target="_blank" class="flex items-center gap-2 text-sm mb-2 font-light text-c-white"><span class="material-symbols-outlined text-blue-400 text-base">phone</span>44 3900 2425</a>
+              <a href="https://web.whatsapp.com/send?phone=5544999215276" class="flex items-center gap-2 text-sm mb-2 font-light text-c-white"><span class="icon-whatsapp text-xl text-blue-400"></span>44 9 9921 5276</a>
+            </div>
+
+            <!-- Contato Cianorte -->
+            <div class="mb-8 flex flex-col items-center sm:items-start">
+              <h4 class="text-sm uppercase mb-2">Contato Cianorte</h4>
+              <a href="#" class="flex items-center gap-2 text-sm mb-2 font-light text-c-white"><span class="material-symbols-outlined text-blue-400 text-base">call</span>44 3039 4721</a>
+              <a href="https://web.whatsapp.com/send?phone=5544991038369" target="_blank" class="flex items-center gap-2 text-sm mb-2 font-light text-c-white"><span class="icon-whatsapp text-blue-400 text-xl"></span>44 9 9103 8369</a>
+              <p class="flex items-center gap-2 text-sm mt-6 font-light"><span class="material-symbols-outlined text-blue-400 !text-[28px] !p-0">schedule</span><span class="text-white">Todos os dias <br /> 09:00 às 20:00 horas</span></p>
+            </div>
           </div>
         </div>
 
-        <div class="mx-auto md:mx-0 md:flex-none text-center sm:text-left">
-          <!-- Contato Paranavaí -->
-          <div class="mb-8 flex flex-col items-center sm:items-start">
-            <h4 class="text-sm uppercase mb-2">Contato Paranavaí</h4>
-            <p class="flex items-center gap-2 text-sm mb-2 font-light text-c-white"><span class="material-symbols-outlined text-blue-400 text-base">phone</span>44 3900 2425</p>
-            <p class="flex items-center gap-2 text-sm mb-2 font-light text-c-white"><span class="icon-whatsapp text-xl text-blue-400"></span>44 9 9921 5276</p>
-          </div>
+        <div class="w-full">
+          <hr class="block w-full md:col-span-3 lg:col-span-5 border-t border-c-white my-8 opacity-15" />
 
-          <!-- Contato Cianorte -->
-          <div class="mb-8 flex flex-col items-center sm:items-start">
-            <h4 class="text-sm uppercase mb-2">Contato Cianorte</h4>
-            <p class="flex items-center gap-2 text-sm mb-2 font-light text-c-white"><span class="material-symbols-outlined text-blue-400 text-base">call</span>44 3039 4721</p>
-            <p class="flex items-center gap-2 text-sm mb-2 font-light text-c-white"><span class="icon-whatsapp text-blue-400 text-xl"></span>44 9 9103 8369</p>
-            <p class="flex items-center gap-2 text-sm mt-6 font-light"><span class="material-symbols-outlined text-blue-400 !text-[28px] !p-0">schedule</span><span class="text-white">Todos os dias <br /> 09:00 às 20:00 horas</span></p>
+          <!-- Redes sociais -->
+          <div class="flex gap-3 mt-4 md:col-span-3 lg:col-span-5 justify-center">
+            <a href="https://api.whatsapp.com/send/?phone=554430394721" target="_blank"><span class="icon-whatsapp text-c-white"></span></a>
+            <a href="https://www.facebook.com/camdallocadora" target="_blank"><span class="icon-facebook text-c-white"></span></a>
+            <a href="https://www.instagram.com/camdallocadora" target="_blank"><span class="icon-instagram text-c-white"></span></a>
           </div>
         </div>
-      </div>
 
-      <div class="w-full">
-        <hr class="block w-full md:col-span-3 lg:col-span-5 border-t border-c-white my-8 opacity-15" />
-
-        <!-- Redes sociais -->
-        <div class="flex gap-3 mt-4 md:col-span-3 lg:col-span-5 justify-center">
-          <a href="#"><span class="icon-whatsapp text-c-white"></span></a>
-          <a href="#"><span class="icon-facebook text-c-white"></span></a>
-          <a href="#"><span class="icon-instagram text-c-white"></span></a>
+        <!-- Endereço e Descrição -->
+        <div class="mt-10 text-center text-xs font-light justify-items-center">
+          <p class="mb-2">©2025 Camdal</p>
+          <p class="mb-2">Avenida Distrito Federal, Jardim Progresso | 87701-310 | Paranavaí - PR | 44 3900 2425 - 44 99921 5276</p>
+          <p>Avenida Goias, 1178, Zona 5 | 87209-006 | Cianorte - PR | 44 3039 4721 - 44 99103 8369</p>
+          <div class="flex flex-col sm:flex-row opacity-75 mt-11 max-w-3xl gap-6 text-left">
+            <p class="text-gray-200 sm:w-1/2">
+              Somos uma empresa especializada na locação de carros, modalidade RAC – Rent a Car. A Camdal foi criada, sempre buscando a Excelência no atendimento aos clientes. <br><br>Queremos que a experiência de locação de um automóvel aos nossos clientes, seja sempre única e com foco na confiança, e assim estreitamos os laços com cada cliente atendido, gerando compromisso de longo prazo com cada indivíduo.
+            </p>
+            <p class="text-gray-200 sm:w-1/2">
+              Quando alcançamos o entendimento completo das necessidades individuais de cada pessoa, nosso objetivo é atingido. Isto facilita na escolha do modelo de veículo a ser escolhido e também no modelo de contrato locação, diário, semanal, quinzenal ou mensal. Nossos colaboradores estão treinados para encontrar a solução ideal a cada ocasião, desde a simples locação para trabalho, uma viagem de final de ano com a família ou mesmo, para levar a noiva ao seu grande momento no altar.
+            </p>
+          </div>
+          <p class="mt-24 text-xs text-gray-400">©2025 Camdal. Todos os direitos reservados</p>
         </div>
-      </div>
-
-      <!-- Endereço e Descrição -->
-      <div class="mt-10 text-center text-xs font-light justify-items-center">
-        <p class="mb-2">©2025 Camdal</p>
-        <p class="mb-2">Avenida Distrito Federal, Jardim Progresso | 87701-310 | Paranavaí - PR | 44 3900 2425 - 44 9 9921 5276</p>
-        <p>Avenida Goias, 1178, Zona 5 | 87209-006 | Cianorte - PR | 44 3039 4721 - 44 9 9103 8369</p>
-        <div class="flex flex-col sm:flex-row opacity-75 mt-11 max-w-3xl gap-6 text-left">
-          <p class="text-gray-200 sm:w-1/2">
-            Somos uma empresa especializada na locação de carros, modalidade RAC – Rent a Car. A Camdal foi criada, sempre buscando a Excelência no atendimento aos clientes. <br><br>Queremos que a experiência de locação de um automóvel aos nossos clientes, seja sempre única e com foco na confiança, e assim estreitamos os laços com cada cliente atendido, gerando compromisso de longo prazo com cada indivíduo.
-          </p>
-          <p class="text-gray-200 sm:w-1/2">
-            Quando alcançamos o entendimento completo das necessidades individuais de cada pessoa, nosso objetivo é atingido. Isto facilita na escolha do modelo de veículo a ser escolhido e também no modelo de contrato locação, diário, semanal, quinzenal ou mensal. Nossos colaboradores estão treinados para encontrar a solução ideal a cada ocasião, desde a simples locação para trabalho, uma viagem de final de ano com a família ou mesmo, para levar a noiva ao seu grande momento no altar.
-          </p>
-        </div>
-        <p class="mt-24 text-xs text-gray-400">©2025 Camdal. Todos os direitos reservados</p>
       </div>
     </div>
   </div>
