--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
 import logoHeader from "../assets/logo-header.svg";
+import { gerarLinkWhatsApp } from "../scripts/getLinkWhatsapp";
 import ListLinksHeader from "./ListLinksHeader.astro";
 
 const links = [
@@ -8,20 +9,23 @@ const links = [
   { name: "Sobre", href: "sobre" },
   { name: "Contato", href: "contato" },
 ];
+
+const link = gerarLinkWhatsApp();
+
 ---
 
 <header id="main-header" class="absolute z-50 h-20 top-0 w-full justify-center transition-colors duration-300">
   <!-- <span class="material-symbols-outlined">search</span> -->
   <nav class="container mx-auto">
     <div class="justify-between md:justify-normal flex flex-wrap items-center mx-auto p-4" id="content-menu-nav">
-      <a href="#" class="flex items-center space-x-3 md:mr-9 lg:mr-20">
+      <a href="/" class="flex items-center space-x-3 md:mr-9 lg:mr-20">
           <img src={logoHeader.src} alt="Camdal Logo" />
       </a>
       <div class="flex md:order-2 space-x-3 md:space-x-0 ">
-        <button type="button" class="hidden sm:flex items-center hover:bg-blue-950 hover:cursor-pointer focus:ring-4 focus:outline-none bg-c-blue font-medium rounded-3xl text-xs px-7 py-3 text-center text-c-white">
+        <a type="button" href={link} target="_blank" class="hidden sm:flex items-center hover:bg-blue-950 hover:cursor-pointer focus:ring-4 focus:outline-none bg-c-blue font-medium rounded-3xl text-xs px-7 py-3 text-center text-c-white">
           Reserve agora
           <span class="icon-whatsapp text-lg ml-2.5"></span>
-        </button>
+        </a>
         <button data-collapse-toggle="navbar-cta" type="button" id="activeMenu" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 " aria-controls="navbar-cta" aria-expanded="false" >
           <span class="sr-only">Abrir menu de navegação</span>
           <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
