--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,13 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
+import "../styles/global.css";
 interface Props {
   title: string;
   description: string;
 }
 
 const { title, description } = Astro.props;
+
 ---
 
 <!doctype html>
@@ -32,5 +34,6 @@ const { title, description } = Astro.props;
 
   <script src="../scripts/handleMenu.ts"></script>
   <script src="../scripts/handleScroll.ts"></script>
+  <script src="../scripts/getLinkWhatsapp.ts"></script>
 </html>
 
