--- a/src/pages/contato.astro
+++ b/src/pages/contato.astro
@@ -9,7 +9,6 @@ import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import { Maps } from "../components/Maps";
 import Layout from "../layouts/Layout.astro";
-import "../styles/global.css";
 ---
 
 <Layout title="Home" description="Home">
@@ -26,14 +25,14 @@ import "../styles/global.css";
         <div>
           <h2 class="text-2xl font-bold mb-4">Redes sociais</h2>
           <div class="flex flex-col gap-2">
-            <p class="flex items-center gap-2 text-base mb-2 font-light"><span class="icon-instagram text-c-blue text-xl"></span>@camdallocadora</p>
-            <p class="flex items-center gap-2 text-base mb-2 font-light"><span class="icon-facebook text-c-blue text-xl"></span>@camdallocadora</p>
+            <a href="https://www.facebook.com/camdallocadora" target="_blank" class="flex items-center gap-2 text-base mb-2 font-light"><span class="icon-instagram text-c-blue text-xl"></span>@camdallocadora</a>
+            <a href="https://www.instagram.com/camdallocadora" target="_blank" class="flex items-center gap-2 text-base mb-2 font-light"><span class="icon-facebook text-c-blue text-xl"></span>@camdallocadora</a>
           </div>
         </div>
 
         <div>
           <h2 class="text-2xl font-bold mb-4">Email</h2>
-          <p class="flex items-center gap-2 text-base mb-2 font-light"><span class="material-symbols-outlined text-c-blue text-xl">mail</span>reserva@camdal.com.br</p>
+          <a href="mailto:reserva@camdal.com.br" class="flex items-center gap-2 text-base mb-2 font-light"><span class="material-symbols-outlined text-c-blue text-xl">mail</span>reserva@camdal.com.br</a>
         </div>
       </div>
 
