--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,24 @@ const { title, description } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="viewport"content="width=device-width, initial-scale=1" />
     <meta name="description" content={description}>
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.png" />
+
+    <meta name="robots" content="index, follow">
+    <meta name="keywords" content="aluguel de carros Cianorte, aluguel de carros Paranavaí, locação de veículos Cianorte, locação de veículos Paranavaí, aluguel de carros Paraná, Camdal Rent, alugar carro Cianorte, alugar carro Paranavaí, aluguel carros região Cianorte Paranavaí, locadora de veículos Cianorte e Paranavaí">
+
+    <!-- Open Graph (para compartilhamento em redes sociais) -->
+    <meta property="og:title" content="Aluguel de Carros em Cianorte, Paranavaí e região | Camdal">
+    <meta property="og:description" content="Locação de veículos com conforto e agilidade nas cidades de Cianorte, Paranavaí e região. Faça sua reserva com a Camdal Rent.">
+    <meta property="og:image" content="https://camdal.vercel.app/_astro/seo.png"> <!-- ajuste conforme a imagem principal do site -->
+    <meta property="og:url" content="https://camdal.com.br">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card (caso use o Twitter) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Aluguel de Carros em Cianorte, Paranavaí e região | Camdal">
+    <meta name="twitter:description" content="Camdal Rent: aluguéis rápidos, seguros e com preço justo para Cianorte, Paranavaí e região. Reserve agora.">
+    <meta name="twitter:image" content="https://camdal.vercel.app/_astro/seo.png">
+
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
