--- a/src/pages/contato.astro
+++ b/src/pages/contato.astro
@@ -11,7 +11,7 @@ import { Maps } from "../components/Maps";
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Home" description="Home">
+<Layout title="Contato | Camdal – Fale Conosco" description="Entre em contato com a equipe do Camdal para tirar dúvidas, enviar sugestões ou solicitar suporte. Preencha o formulário e retornaremos o mais breve possível.">
   <Header />
 	<ContainerPage>
     <BannerSobre type="contato">
