--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import Layout from '../layouts/Layout.astro';
 import bgParallax from "../assets/bg-parallax.jpg";
 ---
 
-<Layout title="Home" description="Home">
+<Layout title="Aluguel de Carros em Cianorte, Paranavaí e região| Camdal Aluguel de carros" description="Agilidade e conforto na locação de veículos em Cianorte/PR, Paranavaí e região. Faça sua reserva com a Camdal.">
   <Header />
 	<ContainerPage>
     <BannerReserva type="home" />
