--- a/src/pages/nossos-carros.astro
+++ b/src/pages/nossos-carros.astro
@@ -9,7 +9,7 @@ import Avaliacoes from "../components/Avaliacoes.astro";
 import RodeComCamdal from "../components/RodeComCamdal.astro";
 ---
 
-<Layout title="Home" description="Home">
+<Layout title="Nossos Carros | Camdal – Conheça Nossa Frota de Veículos" description="Confira os carros disponíveis na Camdal. Veículos revisados, modernos e prontos para atender às suas necessidades com conforto, segurança e qualidade.">
   <Header />
 	<ContainerPage>
     <BannerReserva type="carros" />
