--- a/src/pages/sobre.astro
+++ b/src/pages/sobre.astro
@@ -18,7 +18,7 @@ import BannerAncora from "../components/BannerAncora.astro";
 import bgParallax from "../assets/bg-parallax-sobre.jpg";
 ---
 
-<Layout title="Home" description="Home">
+<Layout title="Sobre a Camdal | Aluguel de Carros em Cianorte, Paranavaí e região" description="Conheça a Camdal, uma empresa especializada em aluguel de carros em Cianorte, Paranavaí e região. Nossa missão é oferecer locação de veículos com qualidade, segurança e excelente atendimento.">
   <Header />
 	<ContainerPage>
     <div class="mb-20 lg:mb-16 xl:mb-24">
