--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title, description } = Astro.props;
     <!-- Open Graph (para compartilhamento em redes sociais) -->
     <meta property="og:title" content="Aluguel de Carros em Cianorte, Paranavaí e região | Camdal">
     <meta property="og:description" content="Locação de veículos com conforto e agilidade nas cidades de Cianorte, Paranavaí e região. Faça sua reserva com a Camdal Rent.">
-    <meta property="og:image" content="https://camdal.vercel.app/_astro/seo.png"> <!-- ajuste conforme a imagem principal do site -->
+    <meta property="og:image" content="https://camdal.vercel.app/static/seo.png"> <!-- ajuste conforme a imagem principal do site -->
     <meta property="og:url" content="https://camdal.com.br">
     <meta property="og:type" content="website">
 
