--- a/src/components/Faq.astro
+++ b/src/components/Faq.astro
@@ -3,11 +3,10 @@ const accordionData = [
   {
     title: "Requisitos para alugar um carro",
     content: `
-      O locatário/condutor deverá possuir idade mínima de 21 anos.
-      O locatário deverá apresentar seu documento de habilitação original, emitido há mais de 2 anos (CNH Definitiva), válido e dentro do prazo de vencimento.
-      Estrangeiros deverão apresentar passaporte, habilitação válida e visto de permanência.
-      O locatário deverá apresentar cartão de crédito válido, dentro do prazo de vencimento, com limite de crédito disponível para pre-autorização.
-      Não serão aceitos pagamentos em dinheiro.
+      Para locar, é necessário que seja maior de 21 anos, com mínimo 02 anos de habilitação;
+      Estar com a documentação em dia e possuir Cartão de Crédito para bloqueio da caução, que é, que uma proporção do valor da franquia do veículo.
+      Faremos a conferencia na retirada e na devolução do veículo, e no retorno, estando tudo igual na retirada, é feito o estorno do cartão logo após o carro ser limpo e inspecionado.
+      Bloqueio será de R$ 1.000,00 para a Caução! Não é permitido passar fronteiras internacionais, com nossos veículos.
     `,
   },
   {
@@ -16,7 +15,7 @@ const accordionData = [
   },
   {
     title: "Reservas de longa duração",
-    content: "Para reservas superiores a 30 dias, o cliente deverá realizar um Contrato Mensal. Caso queira permanecer com o carro alugado, você deverá dirigir-se pessoalmente a Loja para confirmar a disponibilidade do veículo locado, confirmar o novo período e assinar o novo contrato.",
+    content: "Para reservas superiores a 30 dias, o cliente deverá realizar um Contrato Mensal. Caso queira permanecer com o carro alugado, você deverá entrar em contato com a Agencia para confirmar a disponibilidade do veículo locado, confirmar o novo período e assinar o novo contrato.",
   },
   {
     title: "Entregas de veículos",
