--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,8 @@ const link = gerarLinkWhatsApp();
           <img src={logoHeader.src} alt="Camdal Logo" />
       </a>
       <div class="flex md:order-2 space-x-3 md:space-x-0 ">
-        <a type="button" href={link} target="_blank" class="hidden sm:flex items-center hover:bg-blue-950 hover:cursor-pointer focus:ring-4 focus:outline-none bg-c-blue font-medium rounded-3xl text-xs px-7 py-3 text-center text-c-white">
+
+        <a type="button" href={link} target="_blank" class="hidden animate-scale-pulse sm:flex sm:relative items-center hover:bg-blue-950 hover:cursor-pointer focus:ring-4 focus:outline-none bg-c-blue font-medium rounded-3xl text-xs px-7 py-3 text-center text-c-white">
           Reserve agora
           <span class="icon-whatsapp text-lg ml-2.5"></span>
         </a>
