--- a/src/pages/contato.astro
+++ b/src/pages/contato.astro
@@ -19,6 +19,21 @@ import Layout from "../layouts/Layout.astro";
       <p class="text-lg pt-3">
         Estamos sempre preparados para ajudar você no que for preciso. Dúvidas, solicitação ou sugestões? Entre em contato com a gente!
       </p>
+      <a
+        type="buttom"
+        href="https://api.whatsapp.com/send?phone=5544999632358&text=Ol%C3%A1%2C%20gostaria%20de%20falar%20sobre..."
+        class="
+          flex
+          w-full h-14
+          mt-4
+          font-bold text-c-white
+          bg-c-orange
+          rounded-lg
+          justify-center items-center hover:cursor-pointer
+        "
+      >
+        Entrar em contato
+      </a>
     </BannerSobre>
     <div class="grid grid-cols-1 lg:grid-cols-5 max-w-6xl px-5 sm:px-0 mx-auto xl:mt-20 2xl:mt-36 gap-16">
       <div class="col-span-2 flex flex-col justify-center gap-8">
