--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ import logo from "../assets/logo-white.png";
     <div class="max-w-6xl w-full sm:w-2/3 md:w-full grid grid-cols-1 sm:grid-cols-2 gap-8 md:gap-3 md:flex lg:gap-20 xl:gap-40 mx-auto justify-center">
       <div class="flex items-center gap-2">
         <span class="material-symbols-outlined text-c-white bg-c-blue w-16 h-16 rounded-lg !flex justify-center items-center !text-2xl">credit_card</span>
-        <p class="text-sm text-c-blue font-medium">Pague em<br><span class="font-bold">até 12x</span></p>
+        <p class="text-sm text-c-blue font-medium">Pague em<br><span class="font-bold">até 6x</span></p>
       </div>
       <div class="flex items-center gap-2">
         <span class="material-symbols-outlined text-c-white bg-c-blue w-16 h-16 rounded-lg !flex justify-center items-center !text-2xl">sell</span>
@@ -45,7 +45,7 @@ import logo from "../assets/logo-white.png";
               <ul class="space-y-2 text-sm font-light">
                 <li><a href="/">Home</a></li>
                 <li><a href="sobre">Sobre</a></li>
-                <li><a href="nossos-carros">Nossosa carros</a></li>
+                <li><a href="nossos-carros">Nossos carros</a></li>
                 <li><a href="contato">Contato</a></li>
               </ul>
             </div>
@@ -96,10 +96,10 @@ import logo from "../assets/logo-white.png";
           <p>Avenida Goias, 1178, Zona 5 | 87209-006 | Cianorte - PR | 44 3039 4721 - 44 99103 8369</p>
           <div class="flex flex-col sm:flex-row opacity-75 mt-11 max-w-3xl gap-6 text-left">
             <p class="text-gray-200 sm:w-1/2">
-              Somos uma empresa especializada na locação de carros, modalidade RAC – Rent a Car. A Camdal foi criada, sempre buscando a Excelência no atendimento aos clientes. <br><br>Queremos que a experiência de locação de um automóvel aos nossos clientes, seja sempre única e com foco na confiança, e assim estreitamos os laços com cada cliente atendido, gerando compromisso de longo prazo com cada indivíduo.
+              Movida pela fé, guiada pela excelência. Atuamos com aluguel de carros, assinatura e gestão de frotas, oferecendo soluções flexíveis e atendimento personalizado.
             </p>
             <p class="text-gray-200 sm:w-1/2">
-              Quando alcançamos o entendimento completo das necessidades individuais de cada pessoa, nosso objetivo é atingido. Isto facilita na escolha do modelo de veículo a ser escolhido e também no modelo de contrato locação, diário, semanal, quinzenal ou mensal. Nossos colaboradores estão treinados para encontrar a solução ideal a cada ocasião, desde a simples locação para trabalho, uma viagem de final de ano com a família ou mesmo, para levar a noiva ao seu grande momento no altar.
+              Nossa missão é contribuir para que pessoas e negócios trilhem seus caminhos com confiança e segurança. Cada cliente é único. Cada jornada, uma missão.
             </p>
           </div>
           <p class="mt-24 text-xs text-gray-400">©2025 Camdal. Todos os direitos reservados</p>
