Removendo Rent do texto

--- a/src/components/ComoFunciona.astro
+++ b/src/components/ComoFunciona.astro
@@ -6,7 +6,7 @@ import arrow from "../assets/arrow-curved.png"
     <h2 class="text-4xl font-bold mb-8">Como funciona?</h2>
 
     <p class="mb-4 font-light">
-      Na Camdal Rent, alugamos o carro ideal para cada momento da sua vida! Seja para trabalho,
+      Na Camdal, alugamos o carro ideal para cada momento da sua vida! Seja para trabalho,
       lazer ou ocasiões especiais, temos veículos para locação diária, semanal, quinzenal ou mensal.
     </p>
 
