--- a/src/pages/contato.astro
+++ b/src/pages/contato.astro
@@ -21,7 +21,8 @@ import Layout from "../layouts/Layout.astro";
       </p>
       <a
         type="buttom"
-        href="https://api.whatsapp.com/send?phone=5544999632358&text=Ol%C3%A1%2C%20gostaria%20de%20falar%20sobre..."
+        target="_blank"
+        href="https://api.whatsapp.com/send?phone=5544991038369&text=Ol%C3%A1%2C%20gostaria%20de%20falar%20sobre..."
         class="
           flex
           w-full h-14
