--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ import bgParallax from "../assets/bg-parallax.jpg";
       <BannerAncora
         link="sobre"
         title="Conheça sobre nós"
-        description="Somos uma empresa especializada na locação de carros, modalidade RAC – Rent a Car. A Camdal foi criada, sempre buscando a Excelência no atendimento aos clientes."
+        description="Somos uma empresa especializada na locação de carros, modalidade RAC – Rent a Car, assinatura e gestão de frotas. Somos criados, para atender com Excelência os nossos clientes."
         image={bgParallax.src}
       />
     </div>
